# solverforge

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  PRD.md  PRODUCTION_REVIEW_2026-03-20.md  PRODUCTION_REVIEW_ISSUES_2026-03-20.md  README.md  RELEASE.md  SPECS.md  TYPED_CONTRACT_AUDIT.md  employee-scheduling  fix-commits.sh  package.json  progress.txt  zoyd.toml
crates/solverforge/: Cargo.toml  WIREFRAME.md
crates/solverforge-benchmark/: Cargo.toml
crates/solverforge-benchmark/src/: config.rs  lib.rs  report.rs  result.rs  runner.rs
crates/solverforge-bridge/: Cargo.toml  WIREFRAME.md
crates/solverforge-bridge/src/: backend.rs  backend_tests.rs  ids.rs  lib.rs  runner.rs  score.rs  score_tests.rs  slots.rs
crates/solverforge-cli/: Cargo.toml  WIREFRAME.md
crates/solverforge-cli/src/: error.rs  main.rs  output.rs  rc.rs  template.rs  test_support.rs
crates/solverforge-cli/tests/: scaffold_test.rs
crates/solverforge-config/: Cargo.toml  WIREFRAME.md
crates/solverforge-config/src/: acceptor.rs  director.rs  error.rs  forager.rs  lib.rs  move_selector.rs  phase.rs  solver_config.rs  termination.rs  tests.rs
crates/solverforge-console/: Cargo.toml  WIREFRAME.md
crates/solverforge-console/src/: ansi.rs  backend.rs  banner.rs  channel.rs  console.rs  event_listener.rs  format.rs  format_tests.rs  formatter.rs  init.rs  layer.rs  lib.rs  time.rs  visitor.rs
crates/solverforge-core/: Cargo.toml  WIREFRAME.md
crates/solverforge-core/src/: constraint.rs  constraint_tests.rs  error.rs  lib.rs  test_utils.rs
crates/solverforge-cvrp/: Cargo.toml  WIREFRAME.md
crates/solverforge-cvrp/src/: helpers.rs  lib.rs  meters.rs  problem_data.rs  solution.rs  tests.rs
crates/solverforge-dynamic/: Cargo.toml
crates/solverforge-dynamic/src/: constraint_set.rs  descriptor.rs  expr.rs  lib.rs  manager.rs  moves.rs  solution.rs  test_utils.rs
crates/solverforge-macros/: Cargo.toml  WIREFRAME.md
crates/solverforge-macros/src/: attr_parse.rs  attr_validation.rs  attr_validation_tests.rs  constraints.rs  entrypoints.rs  lib.rs  planning_entity.rs  planning_entity_tests.rs  planning_model.rs  planning_solution.rs  planning_solution_tests.rs  problem_fact.rs  scalar_registry.rs
crates/solverforge-macros/tests/: derive_macros.rs  trybuild.rs
crates/solverforge-py/: Cargo.toml  README.md  pyproject.toml  solverforge.pyi  test_employee_scheduling.py  test_nqueens.py
crates/solverforge-py/src/: constraint_builder.rs  convert.rs  lib.rs  solve_result.rs  solver.rs  solver_manager.rs
crates/solverforge-scoring/: Cargo.toml  WIREFRAME.md
crates/solverforge-scoring/src/: lib.rs  test_utils.rs
crates/solverforge-solver/: Cargo.toml  README.md  WIREFRAME.md
crates/solverforge-solver/benches/: selector_cursor_gate.rs
crates/solverforge-solver/src/: basic.rs  builder.rs  config_bridge.rs  descriptor.rs  descriptor_standard.rs  event.rs  event_tests.rs  lib.rs  list.rs  list_placement.rs  list_solver.rs  list_solver_tests.rs  mixed_stock.rs  model_support.rs  operations.rs  problem_spec.rs  public_api.rs  run.rs  run_tests.rs  runtime.rs  runtime_build_error.rs  runtime_tests.rs  solver.rs  solver_tests.rs  standard.rs  statistics.rs  stats.rs  stock.rs  test_utils.rs  test_utils_tests.rs  unified_search.rs
crates/solverforge/src/: __internal.rs  console.rs  cvrp.rs  lib.rs  planning.rs  prelude.rs  solver.rs  stream.rs
crates/solverforge/tests/: configurable_solvable.rs  constraint_accessors.rs  derive_macros.rs  list_clarke_wright_publication.rs  list_cvrp_k_opt_time_window.rs  mixed_variable_order_runtime.rs  projected_publication.rs  scalar_multi_module_runtime.rs  scalar_runtime_publication.rs  scalar_runtime_selector_assembly.rs  scalar_target_source_reuse.rs  solvable_runtime.rs  standard_runtime_publication.rs  standard_runtime_selector_assembly.rs
solverforge/: Cargo.toml  README.md
solverforge-core/: Cargo.toml  README.md
solverforge-core/src/: bridge.rs  entity_context.rs  handles.rs  lib.rs  traits.rs  value.rs
solverforge-core/src/analysis/: manager.rs
solverforge-core/src/constraints/: analyzer.rs  collectors.rs  constraint.rs  joiners.rs  mod.rs  named_expr.rs  stream.rs
solverforge-core/src/domain/: annotations.rs  class.rs  listener.rs  mod.rs  model.rs  shadow.rs
solverforge-core/src/score/: bendable.rs  hard_soft.rs  hard_soft_decimal.rs  mod.rs  simple.rs  simple_decimal.rs
solverforge-core/src/solver/: builder.rs  change.rs  config.rs  environment.rs  factory.rs  manager.rs  mod.rs  request.rs  response.rs  termination.rs
solverforge-core/src/wasm/: expr_builder.rs  expression.rs  generator.rs  host_functions.rs  memory.rs  mod.rs
solverforge-derive/: Cargo.toml  README.md
solverforge-derive/src/: domain_struct.rs  entity.rs  lib.rs  solution.rs
solverforge-derive/tests/: planning_entity_tests.rs  planning_solution_tests.rs  solver_builder_integration_tests.rs
solverforge-go/: Cargo.toml  README.md  build.rs  cbindgen.toml
solverforge-go/go/: go.mod
solverforge-go/go/solverforge/: bridge_cgo.go  bridge_test.go  errors.go  handle.go  memory.go  memory_test.go  reflect.go  reflect_test.go  registry.go  registry_test.go  solverforge.h  value.go  value_test.go
solverforge-go/src/: bridge.rs  conversions.rs  errors.rs  ffi.rs  lib.rs  registry.rs
solverforge-python/: Cargo.toml  README.md  pyproject.toml
solverforge-python/python/solverforge/: __init__.py
solverforge-python/src/: annotations.rs  bridge.rs  collectors.rs  decorators.rs  joiners.rs  lambda_analyzer.rs  lib.rs  score.rs  service.rs  solver.rs  stream.rs
solverforge-python/src/lambda_analyzer/: ast_convert.rs  bytecode.rs  conditionals.rs  constants.rs  lambda_parsing.rs  loops.rs  method_analysis.rs  mod.rs  patterns.rs  registry.rs  sequential.rs  tests.rs  type_inference.rs
solverforge-service/: Cargo.toml
solverforge-service/src/: error.rs  jar.rs  lib.rs  service.rs  util.rs
solverforge-service/tests/: employee_scheduling_integration.rs  integration.rs  solve_integration.rs
solverforge/src/: lib.rs
(+1509 files in other folders)
