[workspace]
resolver = "2"
members = [
    "crates/solverforge-core",
    "crates/solverforge-macros",
    "crates/solverforge-scoring",
    "crates/solverforge-solver",
    "crates/solverforge-config",
    "crates/solverforge-console",
    "crates/solverforge",
    "crates/solverforge-cvrp",
    "crates/solverforge-test",
    "crates/solverforge-cli",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/solverforge/solverforge-rs"
rust-version = "1.80"  # Updated for rayon 1.11

[workspace.dependencies]
# Internal crates (path-only; versions specified per-crate for publishing)
solverforge-core = { path = "crates/solverforge-core" }
solverforge-macros = { path = "crates/solverforge-macros" }
solverforge-scoring = { path = "crates/solverforge-scoring" }
solverforge-solver = { path = "crates/solverforge-solver" }
solverforge-config = { path = "crates/solverforge-config" }
solverforge = { path = "crates/solverforge" }
solverforge-console = { path = "crates/solverforge-console" }
solverforge-cvrp = { path = "crates/solverforge-cvrp" }
solverforge-test = { path = "crates/solverforge-test" }

# External dependencies
thiserror = "2.0"  # Updated from 1.0
serde = { version = "1.0", features = ["derive"] }
toml = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.48", features = ["full"] }  # Updated from 1.0
crossbeam = "0.8"
num-traits = "0.2"
rust_decimal = "1.33"
rand = "0.10"
rand_chacha = "0.10"
rayon = "1.11"  # New - for parallel move evaluation
smallvec = "1.15"  # Updated from 1.11

# CLI dependencies
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dialoguer = "0.11"
include_dir = "0.7"
owo-colors = "4"
strsim = "0.11"

# Proc-macro dependencies
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
