[workspace]
resolver = "2"
members = [
    "crates/solverforge-core",
    "crates/solverforge-macros",
    "crates/solverforge-scoring",
    "crates/solverforge-solver",
    "crates/solverforge-config",
    "crates/solverforge-console",
    "crates/solverforge",
    "crates/solverforge-cvrp",
    "crates/solverforge-test",
]

[workspace.package]
version = "0.8.11"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/solverforge/solverforge-rs"
rust-version = "1.92"

[workspace.dependencies]
# Internal crates (path-only; versions specified per-crate for publishing)
solverforge-core = { path = "crates/solverforge-core" }
solverforge-macros = { path = "crates/solverforge-macros" }
solverforge-scoring = { path = "crates/solverforge-scoring" }
solverforge-solver = { path = "crates/solverforge-solver" }
solverforge-config = { path = "crates/solverforge-config" }
solverforge = { path = "crates/solverforge" }
solverforge-console = { path = "crates/solverforge-console" }
solverforge-cvrp = { path = "crates/solverforge-cvrp" }
solverforge-test = { path = "crates/solverforge-test" }

# External dependencies
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
serde_yaml = "0.9.34"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.51.1", features = ["full"] }
crossbeam = "0.8.4"
num-traits = "0.2.19"
rust_decimal = "1.41.0"
rand = "0.10.1"
rand_chacha = "0.10.0"
rayon = "1.11.0"
smallvec = "1.15.1"
owo-colors = "4.3.0"

# Proc-macro dependencies
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
