[package]
name = "solverforge-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macros for SolverForge domain types"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
solverforge-core = { path = "../solverforge-core" }
