[package]
name = "solverforge-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories = ["development-tools::procedural-macro-helpers"]
homepage.workspace = true
documentation.workspace = true
description = "Derive macros for SolverForge domain types"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
solverforge-core = { version = "0.2.4", path = "../solverforge-core" }
serde = { workspace = true }
serde_json = { workspace = true }
