[package]
name = "solverforge-go"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Go bindings for SolverForge constraint solver (FFI layer)"
publish = false

[lib]
# Both staticlib and cdylib for flexibility
crate-type = ["staticlib", "cdylib"]
name = "solverforge_go"

[dependencies]
solverforge-core = { path = "../solverforge-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
libc = "0.2"

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
