[package]
name = "solverforge-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for SolverForge constraint solver"

[lib]
name = "solverforge"
crate-type = ["cdylib"]

[dependencies]
solverforge-core = { path = "../solverforge-core" }
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
tempfile.workspace = true
