[package]
name = "solverforge-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for SolverForge constraint solver"

[lib]
name = "solverforge"
# cdylib for Python extension, rlib for Rust tests
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
# For building as Python extension (maturin build)
extension-module = ["pyo3/extension-module"]
# For running Rust tests with embedded Python
auto-initialize = ["pyo3/auto-initialize"]

[dependencies]
solverforge-core = { path = "../solverforge-core" }
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
tempfile.workspace = true
