[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "solverforge"
version = "0.2.0"
description = "Python bindings for SolverForge constraint solver"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["constraint", "solver", "optimization", "scheduling", "planning"]

[project.urls]
Homepage = "https://github.com/solverforge/solverforge"
Repository = "https://github.com/solverforge/solverforge"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "solverforge._solverforge"
