[package]
name = "solverforge-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JVM lifecycle management for SolverForge"

[lib]
crate-type = ["rlib"]

[dependencies]
solverforge-core = { path = "../solverforge-core" }
reqwest = { workspace = true, features = ["blocking"] }
log = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
env_logger = "0.11"
serde_json = { workspace = true }
wat = "1.219"
base64 = "0.22"
indexmap = { workspace = true }
