[package]
name = "solverforge-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JVM lifecycle management for SolverForge"

[lib]
crate-type = ["rlib"]

# [[bin]]
# name = "solverforge-dump"
# path = "src/bin/solverforge_dump.rs"

[dependencies]
solverforge-core = { path = "../solverforge-core" }
reqwest = { workspace = true, features = ["blocking"] }
log = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
base64 = "0.22"
indexmap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }
env_logger = "0.11"
wat = "1.219"
