[package]
name = "solverforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI for scaffolding and managing SolverForge constraint solver projects"

[[bin]]
name = "solverforge"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
dialoguer = { workspace = true }
include_dir = { workspace = true }
owo-colors = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
