[package]
name = "solverforge-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration system for SolverForge constraint solver"

[dependencies]
solverforge-core.workspace = true
serde.workspace = true
toml.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
