[package]
name = "solverforge-console"
version = "0.4.0"
edition = "2021"
authors = ["SolverForge Contributors"]
license = "Apache-2.0"
description = "SERIO Console - Production-grade console and logging system for SolverForge"
repository = "https://github.com/solverforge/solverforge"
keywords = ["optimization", "solver", "console", "tui", "logging"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
# SolverForge dependencies
solverforge-core = { workspace = true }
solverforge-solver = { workspace = true }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Synchronization
parking_lot = "0.12"

# Optional serialization for JSON output
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]

[features]
default = []
json = ["serde", "serde_json"]
