[package]
name = "solverforge-console"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Colorful console output for SolverForge solver metrics"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
owo-colors = { workspace = true }
num-format = "0.4.4"

[features]
verbose-logging = []
