[package]
name = "solverforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for SolverForge constraint solver"

[features]
default = []
decimal = ["rust_decimal"]

[dependencies]
thiserror.workspace = true
num-traits.workspace = true
rust_decimal = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
