[package]
name = "solverforge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for SolverForge constraint solver"

[features]
default = []
decimal = []
serde = ["dep:serde"]

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
