[package]
name = "solverforge-cvrp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CVRP domain helpers for SolverForge"

[dependencies]
solverforge-solver = { version = "0.5.17", path = "../solverforge-solver" }
