[package]
name = "solverforge-dynamic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Runtime-defined solution types for SolverForge"

[dependencies]
solverforge-core.workspace = true
solverforge-scoring.workspace = true
solverforge-solver.workspace = true

thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[dev-dependencies]
