[package]
name = "solverforge-dynamic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Runtime-defined solution types for SolverForge"

[dependencies]
solverforge-config.workspace = true
solverforge-core.workspace = true
solverforge-scoring.workspace = true
solverforge-solver.workspace = true
solverforge-console = { version = "0.5.2", path = "../solverforge-console" }

thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
rand_chacha.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-module.workspace = true
cranelift-jit.workspace = true
cranelift-native.workspace = true

[dev-dependencies]
