[package]
name = "solverforge-scoring"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Incremental constraint scoring for SolverForge"

[dependencies]
solverforge-core = { version = "0.6.0", path = "../solverforge-core" }
thiserror.workspace = true

[dev-dependencies]
solverforge-test = { workspace = true }
