[package]
name = "solverforge-scoring"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Incremental constraint scoring for SolverForge"

[dependencies]
solverforge-core = { version = "0.13.0", path = "../solverforge-core" }
thiserror.workspace = true
