[package]
name = "solverforge-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solver engine for SolverForge"

[dependencies]
solverforge-core.workspace = true
solverforge-scoring.workspace = true
solverforge-config.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
smallvec.workspace = true
