[package]
name = "solverforge-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solver engine for SolverForge"

[dependencies]
solverforge-core = { version = "0.4.0", path = "../solverforge-core" }
solverforge-scoring = { version = "0.4.0", path = "../solverforge-scoring" }
solverforge-config = { version = "0.4.0", path = "../solverforge-config" }
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
smallvec.workspace = true
serde.workspace = true
