[package]
name = "solverforge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SolverForge - A constraint solver in Rust"

[features]
default = []
decimal = ["solverforge-core/decimal"]
serde = ["solverforge-core/serde"]
console = ["dep:tracing", "dep:tracing-subscriber", "dep:owo-colors", "dep:num-format"]
verbose-logging = []

[dependencies]
solverforge-core = { version = "0.5.0" }
solverforge-macros = { version = "0.5.0" }
solverforge-scoring = { version = "0.5.0" }
solverforge-solver = { version = "0.5.0" }
solverforge-config = { version = "0.5.0" }

# Console output (optional)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
owo-colors = { version = "4", optional = true }
num-format = { version = "0.4", optional = true }
