[package]
name = "solverforge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SolverForge - A constraint solver in Rust"

[features]
default = []
decimal = ["solverforge-core/decimal"]
serde = ["solverforge-core/serde"]
console = ["dep:solverforge-console"]
verbose-logging = []

[dependencies]
solverforge-core = { version = "0.5.2", path = "../solverforge-core" }
solverforge-macros = { version = "0.5.2", path = "../solverforge-macros" }
solverforge-scoring = { version = "0.5.2", path = "../solverforge-scoring" }
solverforge-solver = { version = "0.5.2", path = "../solverforge-solver" }
solverforge-config = { version = "0.5.2", path = "../solverforge-config" }

# Console output (optional)
solverforge-console = { version = "0.5.2", path = "../solverforge-console", optional = true }
