[package]
name = "solverforge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SolverForge - A constraint solver in Rust"

[features]
default = []
decimal = ["solverforge-core/decimal"]
serde = ["solverforge-core/serde"]
console = ["dep:solverforge-console"]
verbose-logging = ["solverforge-console/verbose-logging"]

[dependencies]
solverforge-core = { version = "0.7.1", path = "../solverforge-core" }
solverforge-macros = { version = "0.7.1", path = "../solverforge-macros" }
solverforge-scoring = { version = "0.7.1", path = "../solverforge-scoring" }
solverforge-solver = { version = "0.7.1", path = "../solverforge-solver" }
solverforge-config = { version = "0.7.1", path = "../solverforge-config" }

solverforge-cvrp = { version = "0.7.1", path = "../solverforge-cvrp" }
tokio = { workspace = true, features = ["sync"] }

# Console output (optional)
solverforge-console = { version = "0.7.1", path = "../solverforge-console", optional = true }
